--- a/AndroidsDemo/res/layout/activity_shapeimageview.xml
+++ b/AndroidsDemo/res/layout/activity_shapeimageview.xml
@@ -53,6 +53,7 @@
                 android:layout_marginTop="10dp"
                 android:background="#000"
                 android:src="@drawable/world_map"
+                app:sel_background_corners="50dp"
                 app:siv_border_color="#ffffff"
                 app:siv_border_size="2dp"
                 app:siv_round_radius="15dp"
@@ -77,7 +78,10 @@
                 android:layout_height="110dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
+                android:background="#000"
                 android:src="@drawable/world_map"
+                app:sel_background_border_color="#00ff00"
+                app:sel_background_border_width="5dp"
                 app:siv_border_color="#ff0000"
                 app:siv_border_size="5dp"
                 app:siv_round_radius="15dp"
