--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -187,31 +187,46 @@
                     app:sel_background_border_pressed="#888888"
                     app:sel_background_border_width="8dp"
                     app:sel_background_corners="10dp"
-                    app:sel_background_pressed="#ff0000"
+                    app:sel_background_pressed="@drawable/ic_launcher"
                     />
             </LinearLayout>
 
-            <cn.forward.androids.views.STextView
-                android:id="@+id/stextview"
-                android:layout_width="150dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginTop="10dp"
-                android:background="#00ff00"
-                android:clickable="true"
-                android:gravity="center"
-                android:text="TextView2"
-                android:textColor="#000000"
-                app:injectListener="true"
-                app:sel_background_border_color="#ff0000"
-                app:sel_background_border_pressed="#888888"
-                app:sel_background_border_selected="#880088"
-                app:sel_background_border_width="4dp"
-                app:sel_background_corner_bottomRight="10dp"
-                app:sel_background_pressed="#0000ff"
-                app:sel_background_selected="#0088ff"
-                app:stv_text_color_pressed="#ff0000"
-                app:stv_text_color_selected="#ff8800"
-                />
+                android:orientation="horizontal">
+
+                <cn.forward.androids.views.STextView
+                    android:id="@+id/stextview"
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    android:background="#00ff00"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="TextView2"
+                    android:textColor="#000000"
+                    app:injectListener="true"
+                    app:sel_background_border_color="#ff0000"
+                    app:sel_background_border_pressed="#888888"
+                    app:sel_background_border_selected="#880088"
+                    app:sel_background_border_width="4dp"
+                    app:sel_background_corner_bottomRight="10dp"
+                    app:sel_background_pressed="#0000ff"
+                    app:sel_background_selected="#0088ff"
+                    app:stv_text_color_pressed="#ff0000"
+                    app:stv_text_color_selected="#ff8800"
+                    />
+
+                <TextView
+                    android:visibility="gone"
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    android:background="#f00"
+                    android:gravity="center"
+                    android:text="TextView2"
+                    android:textColor="#000000"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
