--- a/AndroidsDemo/res/values/color.xml
+++ b/AndroidsDemo/res/values/color.xml
@@ -6,4 +6,6 @@
 
     <color name="item_bg">#454545</color>
     <color name="item_bg_pressed">#707070</color>
+
+    <color name="green">#00ff00</color>
 </resources>
