处理水波纹ripple属性在低版本系统上的兼容性

--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -220,27 +220,43 @@
                 android:orientation="horizontal">
 
                 <cn.forward.androids.views.STextView
-                    android:layout_width="150dp"
+                    android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:background="@drawable/bg"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="水波纹"
                     android:textColor="#000000"
-                    app:sel_background_ripple="#ff0000"
+                    app:sel_background_ripple="#88ff0000"
                     app:sel_background_ripple_mask="#00ff00"
                     app:sel_background_ripple_mask_shape="oval"
                     app:sel_background_shape="oval"
-                    android:background="@drawable/bg"
                     />
 
                 <cn.forward.androids.views.STextView
-                    android:layout_width="150dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="#88000000"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="水波纹"
+                    android:textColor="#000000"
+                    app:sel_background_pressed="#ffff00"
+                    app:sel_background_ripple="#88ff0000"
+                    app:sel_background_ripple_mask="#00ff00"
+                    app:sel_background_ripple_mask_shape="oval"
+                    app:sel_background_shape="oval"
+                    />
+
+                <cn.forward.androids.views.STextView
+                    android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="图片水波纹"
                     android:textColor="#000000"
-                    app:sel_background_ripple="#ff0000"
+                    app:sel_background_ripple="#88ff0000"
                     app:sel_background_ripple_mask="@drawable/ic_launcher"
                     />
             </LinearLayout>
