优化手势识别类TouchGestureDetector,ScaleGestureDetector使用Api27源码

--- a/AndroidsDemo/res/layout/activity_touchgesturedetector.xml
+++ b/AndroidsDemo/res/layout/activity_touchgesturedetector.xml
@@ -16,6 +16,7 @@
     <com.example.androidsdemo.view.EasyPaintView
         android:id="@+id/easy_paint_view"
         android:layout_width="match_parent"
+        android:background="#88888888"
         android:layout_height="match_parent"/>
 
     <TextView
