--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -31,6 +31,7 @@
                     app:miv_is_ignore_alpha="true"
                     app:miv_mask_color="#88000000"
                     app:miv_mask_level="background"
+                    app:sel_background_shape="oval"
                     app:sel_background_corners="20dp"/>
 
                 <FrameLayout
