--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,13 +30,13 @@
                     app:miv_is_ignore_alpha="true"
                     app:miv_mask_color="#88000000"
                     app:miv_mask_level="background"
-                    app:sel_background_shape="oval"
-                    app:sel_background_corners="20dp"/>
+                    app:sel_background_corners="20dp"
+                    app:sel_background_shape="oval" />
 
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
                 <cn.forward.androids.views.MaskImageView
                     android:layout_width="110dp"
@@ -49,12 +48,12 @@
                     app:miv_is_ignore_alpha="false"
                     app:miv_mask_color="#88ffffff"
                     app:miv_mask_level="background"
-                    app:sel_background_corner_bottomRight="30dp"/>
+                    app:sel_background_corner_bottomRight="30dp" />
 
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
                 <cn.forward.androids.views.MaskImageView
                     android:layout_width="110dp"
@@ -65,7 +64,7 @@
                     android:src="@drawable/ic_launcher"
                     app:miv_is_ignore_alpha="true"
                     app:miv_mask_color="#88000000"
-                    app:miv_mask_level="background"/>
+                    app:miv_mask_level="background" />
             </LinearLayout>
 
             <LinearLayout
@@ -77,12 +76,13 @@
                 <cn.forward.androids.views.MaskImageView
                     android:layout_width="110dp"
                     android:layout_height="110dp"
+                    android:background="@drawable/bg"
                     android:clickable="true"
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_launcher"
                     app:miv_is_ignore_alpha="true"
                     app:miv_mask_color="#880000ff"
-                    app:miv_mask_level="foreground"/>
+                    app:miv_mask_level="foreground" />
 
                 <cn.forward.androids.views.MaskImageView
                     android:layout_width="110dp"
@@ -94,8 +94,7 @@
                     android:src="@drawable/ic_launcher"
                     app:miv_is_ignore_alpha="false"
                     app:miv_mask_color="#880000ff"
-                    app:miv_mask_level="foreground"
-                    />
+                    app:miv_mask_level="foreground" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -105,8 +104,7 @@
                     android:gravity="center"
                     android:text="前景遮罩"
                     android:textColor="#000000"
-                    android:textSize="20dp"
-                    />
+                    android:textSize="20dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -124,7 +122,7 @@
                     android:src="@drawable/ic_launcher"
                     app:miv_is_ignore_alpha="true"
                     app:miv_mask_color="#880000ff"
-                    app:miv_mask_level="background"/>
+                    app:miv_mask_level="background" />
 
                 <cn.forward.androids.views.MaskImageView
                     android:layout_width="110dp"
@@ -136,8 +134,7 @@
                     android:src="@drawable/ic_launcher"
                     app:miv_is_ignore_alpha="false"
                     app:miv_mask_color="#880000ff"
-                    app:miv_mask_level="background"
-                    />
+                    app:miv_mask_level="background" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -147,8 +144,7 @@
                     android:gravity="center"
                     android:text="背景遮罩"
                     android:textColor="#000000"
-                    android:textSize="20dp"
-                    />
+                    android:textSize="20dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -173,8 +169,7 @@
                     app:sel_background_corners="10dp"
                     app:sel_background_pressed="#ffffff"
                     app:sel_background_shape="oval"
-                    app:stv_text_color_pressed="#ff0000"
-                    />
+                    app:stv_text_color_pressed="#ff0000" />
 
                 <cn.forward.androids.views.STextView
                     android:id="@+id/stextview"
@@ -195,8 +190,7 @@
                     app:sel_background_pressed="#0000ff"
                     app:sel_background_selected="#0088ff"
                     app:stv_text_color_pressed="#ff0000"
-                    app:stv_text_color_selected="#ff8800"
-                    />
+                    app:stv_text_color_selected="#ff8800" />
 
                 <cn.forward.androids.views.SFrameLayout
                     android:layout_width="100dp"
@@ -209,8 +203,7 @@
                     app:sel_background_border_pressed="#888888"
                     app:sel_background_border_width="8dp"
                     app:sel_background_corners="10dp"
-                    app:sel_background_pressed="@drawable/ic_launcher"
-                    />
+                    app:sel_background_pressed="@drawable/ic_launcher" />
             </LinearLayout>
 
             <LinearLayout
@@ -230,8 +223,7 @@
                     app:sel_background_ripple="#88ff0000"
                     app:sel_background_ripple_mask="#00ff00"
                     app:sel_background_ripple_mask_shape="oval"
-                    app:sel_background_shape="oval"
-                    />
+                    app:sel_background_shape="oval" />
 
                 <cn.forward.androids.views.STextView
                     android:layout_width="100dp"
@@ -241,14 +233,13 @@
                     android:gravity="center"
                     android:text="水波纹"
                     android:textColor="#000000"
+                    app:sel_background_border_color="#ff0000"
+                    app:sel_background_border_width="4dp"
                     app:sel_background_pressed="#ffff00"
                     app:sel_background_ripple="#88ff0000"
                     app:sel_background_ripple_mask="#00ff00"
                     app:sel_background_ripple_mask_shape="oval"
-                    app:sel_background_shape="oval"
-                    app:sel_background_border_color="#ff0000"
-                    app:sel_background_border_width="4dp"
-                    />
+                    app:sel_background_shape="oval" />
 
                 <cn.forward.androids.views.STextView
                     android:layout_width="100dp"
@@ -258,8 +249,7 @@
                     android:text="图片水波纹"
                     android:textColor="#000000"
                     app:sel_background_ripple="#88ff0000"
-                    app:sel_background_ripple_mask="@drawable/ic_launcher"
-                    />
+                    app:sel_background_ripple_mask="@drawable/ic_launcher" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
