--- a/AndroidsDemo/res/layout/activity_ellipise_demo.xml
+++ b/AndroidsDemo/res/layout/activity_ellipise_demo.xml
@@ -111,9 +111,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="裁剪"
-                android:textColor="#888888"
+                android:layout_marginTop="30dp"
+                android:text="裁剪Ellipsize"
+                android:textColor="#000"
                 android:textSize="12dp" />
 
             <TextView
